[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
alignment = 0

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
text = "Vidas: 3"

[node name="MessageLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
text = ""
